--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <ul class="clearfix">
             <li><a href="index.html" class="active">主页</a></li>
             <li><a href="whisper.html">流言</a></li>
-            <li><a href="#">蜚语</a></li>
+            <li><a href="tale.html">蜚语</a></li>
             <li><a href="#">杂谈</a></li>
             <li><a href="#">望</a></li>
             <li><a href="#" class="last">闻</a></li>
