--- a/whisper.html
+++ b/whisper.html
@@ -19,8 +19,8 @@
     <nav class="clearfix">
         <ul class="clearfix">
             <li><a href="index.html">主页</a></li>
-            <li><a href="#" class="active">流言</a></li>
-            <li><a href="#">蜚语</a></li>
+            <li><a href="whisper.html" class="active">流言</a></li>
+            <li><a href="tale.html">蜚语</a></li>
             <li><a href="#">杂谈</a></li>
             <li><a href="#">望</a></li>
             <li><a href="#" class="last">闻</a></li>
