--- a/createWhisper.html
+++ b/createWhisper.html
@@ -19,15 +19,7 @@
             <!--</div>-->
             <div class="global-menu">
                 <div class="global-menu__wrap">
-                    <b class="global-menu__item global-menu__item--demo-1" style="font-size: 16px">ICON:</b><input
-                        class="global-menu__item global-menu__item--demo-1 hero-btn" value=""
-                        style="height: 40px;width: 400px;font-size: 35px;">
-                    <b class="global-menu__item global-menu__item--demo-1" style="font-size: 16px">TIME:</b><input
-                        class="global-menu__item global-menu__item--demo-1 hero-btn" value=""
-                        style="height: 40px;width: 400px;font-size: 35px;">
-                    <b class="global-menu__item global-menu__item--demo-1" style="font-size: 16px">WHISPER:</b><input
-                        class="global-menu__item global-menu__item--demo-1 hero-btn" value=""
-                        style="height: 40px;width: 400px;font-size: 35px;">
+                    <b class="global-menu__item global-menu__item--demo-1" style="font-size: 30px">记忆...是时光的载体...时光...是记忆的重量....</b>
                 </div>
             </div>
             <svg class="shape-overlays" viewBox="0 0 100 100" preserveAspectRatio="none">
