--- a/tale.html
+++ b/tale.html
@@ -21,9 +21,9 @@
             <li><a href="index.html">主页</a></li>
             <li><a href="whisper.html">流言</a></li>
             <li><a href="tale.html" class="active">蜚语</a></li>
-            <li><a href="#">杂谈</a></li>
-            <li><a href="#">望</a></li>
-            <li><a href="#" class="last">闻</a></li>
+            <li><a href="informal.html">杂谈</a></li>
+            <li><a href="look.html">望</a></li>
+            <li><a href="hear.html" class="last">闻</a></li>
         </ul>
     </nav>
     <div class="pullcontainer">
@@ -84,6 +84,24 @@
                                         overflow: hidden;    text-overflow: ellipsis;    display: -webkit-box;    -webkit-line-clamp: 2;">
                                         人世间的修行，皆是自然简明，不留痕迹。况我落落姿态，不喜与人多生嫌隙，随缘喜乐。总有执念，亦不过是对草木长情，于旧物多了几分痴心。
                                         尘世间，不过一个你，一个我，有缘则遇，无缘则散。</p>
+                                </div>
+                                <div style="border-top: 1px solid #ebeef6;   background: #fff;    padding-left: 20px; padding-top: 5px;   font-size: 14px;">
+                                    <span style="padding-right: 8px;">王掌柜</span>
+                                </div>
+                            </article>
+                        </div>
+                    </div>
+                    <div style="    overflow: hidden; margin: 0 40px;">
+                        <div style="display: block;width: 100%;    float: left;vertical-align: top;    padding: 0 15px;    margin-bottom: 30px;">
+                            <article
+                                    style=" visibility: visible;  position: relative;  background: #fff; display: block; box-shadow: 0 2px 5px 3px #eff1f8;  border-radius: 3px;">
+                                <div style="    padding: 15px 15px 5px 15px;">
+                                    <h3 style="    font-size: 24px;color: #178dc4;    margin: 0 0 15px;">
+                                        2019-09-13</h3>
+                                    <p style="    font-size: 16px; line-height: 24px;    color: #606060;
+                                        overflow: hidden;    text-overflow: ellipsis;    display: -webkit-box;    -webkit-line-clamp: 2;">
+                                        绿杨芳草长亭路。年少抛人容易去。楼头残梦五更钟，花底离情三月雨。
+                                        无情不似多情苦。一寸还成千万缕。天涯地角有穷时，只有相思无尽处。 《玉楼春·春恨》</p>
                                 </div>
                                 <div style="border-top: 1px solid #ebeef6;   background: #fff;    padding-left: 20px; padding-top: 5px;   font-size: 14px;">
                                     <span style="padding-right: 8px;">王掌柜</span>
