--- a/whisper.html
+++ b/whisper.html
@@ -21,9 +21,9 @@
             <li><a href="index.html">主页</a></li>
             <li><a href="whisper.html" class="active">流言</a></li>
             <li><a href="tale.html">蜚语</a></li>
-            <li><a href="#">杂谈</a></li>
-            <li><a href="#">望</a></li>
-            <li><a href="#" class="last">闻</a></li>
+            <li><a href="informal.html">杂谈</a></li>
+            <li><a href="look.html">望</a></li>
+            <li><a href="hear.html" class="last">闻</a></li>
         </ul>
     </nav>
     <div class="pullcontainer">
