--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             <li><a href="index.html" class="active">主页</a></li>
             <li><a href="whisper.html">流言</a></li>
             <li><a href="tale.html">蜚语</a></li>
-            <li><a href="#">杂谈</a></li>
-            <li><a href="#">望</a></li>
-            <li><a href="#" class="last">闻</a></li>
+            <li><a href="informal.html">杂谈</a></li>
+            <li><a href="look.html">望</a></li>
+            <li><a href="hear.html" class="last">闻</a></li>
         </ul>
     </nav>
     <div class="pullcontainer">
