就该坦荡活得壮丽

--- a/hear.html
+++ b/hear.html
@@ -74,6 +74,57 @@
                     </div>
 
 
+                    <div style="display: block;   float: left;vertical-align: top;    padding: 0 15px;    margin-bottom: 30px; width: 30% ">
+                        <article
+                                style=" visibility: visible;  position: relative;  background: #fff; display: block; box-shadow: 0 2px 5px 3px #eff1f8;  border-radius: 3px; ">
+                            <div style="    padding: 15px 15px 5px 15px;">
+                                <h3 style="    font-size: 24px;color: #178dc4;    margin: 0 0 15px;">
+                                    可能否-木小雅 </h3>
+                                <img src="./hear/kenengfou.jpg" style="height: 100px;width: 100px">
+                                <!--<p style="    font-size: 16px; line-height: 24px;    color: #606060;-->
+                                <!--overflow: hidden;    text-overflow: ellipsis;    display: -webkit-box;    -webkit-line-clamp: 2;">-->
+                                <!--</p>-->
+                            </div>
+                            <div style="border-top: 1px solid #ebeef6;   background: #fff;    padding-left: 20px; padding-top: 5px;   font-size: 14px;">
+                                <span style="padding-right: 8px;">可能我撞了南墙才会回头吧</span>
+                            </div>
+                        </article>
+                    </div>
+
+                    <div style="display: block;   float: left;vertical-align: top;    padding: 0 15px;    margin-bottom: 30px; width: 30% ">
+                        <article
+                                style=" visibility: visible;  position: relative;  background: #fff; display: block; box-shadow: 0 2px 5px 3px #eff1f8;  border-radius: 3px; ">
+                            <div style="    padding: 15px 15px 5px 15px;">
+                                <h3 style="    font-size: 24px;color: #178dc4;    margin: 0 0 15px;">
+                                    暖山-刘珂矣 </h3>
+                                <img src="./hear/nuanshan.jpg" style="height: 100px;width: 100px">
+                                <!--<p style="    font-size: 16px; line-height: 24px;    color: #606060;-->
+                                <!--overflow: hidden;    text-overflow: ellipsis;    display: -webkit-box;    -webkit-line-clamp: 2;">-->
+                                <!--</p>-->
+                            </div>
+                            <div style="border-top: 1px solid #ebeef6;   background: #fff;    padding-left: 20px; padding-top: 5px;   font-size: 14px;">
+                                <span style="padding-right: 8px;">我把满山的月光送给你当行囊</span>
+                            </div>
+                        </article>
+                    </div>
+
+                    <div style="display: block;   float: left;vertical-align: top;    padding: 0 15px;    margin-bottom: 30px; width: 30% ">
+                        <article
+                                style=" visibility: visible;  position: relative;  background: #fff; display: block; box-shadow: 0 2px 5px 3px #eff1f8;  border-radius: 3px; ">
+                            <div style="    padding: 15px 15px 5px 15px;">
+                                <h3 style="    font-size: 24px;color: #178dc4;    margin: 0 0 15px;">
+                                    致，孤勇如你-情桑 </h3>
+                                <img src="./hear/guyong.jpg" style="height: 100px;width: 100px">
+                                <!--<p style="    font-size: 16px; line-height: 24px;    color: #606060;-->
+                                <!--overflow: hidden;    text-overflow: ellipsis;    display: -webkit-box;    -webkit-line-clamp: 2;">-->
+                                <!--</p>-->
+                            </div>
+                            <div style="border-top: 1px solid #ebeef6;   background: #fff;    padding-left: 20px; padding-top: 5px;   font-size: 14px;">
+                                <span style="padding-right: 8px;">就该坦荡活得壮丽</span>
+                            </div>
+                        </article>
+                    </div>
+
                 </section>
             </div><!-- /container -->
         </div>
