来不及认真的年轻过 就认真的老去

--- a/hear.html
+++ b/hear.html
@@ -41,7 +41,7 @@
                     <div style="display: block;   float: left;vertical-align: top;    padding: 0 15px;    margin-bottom: 30px; width: 30% ">
                         <article
                                 style=" visibility: visible;  position: relative;  background: #fff; display: block; box-shadow: 0 2px 5px 3px #eff1f8;  border-radius: 3px; ">
-                            <div style="    padding: 15px 15px 5px 15px;">
+                            <div style="padding: 15px 15px 5px 15px; background-image: url(bofang.gif) ;background-size: 350px 200px ;background-repeat:no-repeat;">
                                 <h3 style="    font-size: 24px;color: #178dc4;    margin: 0 0 15px;">
                                     盗将行-花粥 </h3>
                                 <img src="./hear/daojiangxing.jpg" style="height: 100px;width: 100px">
@@ -113,7 +113,7 @@
                                 style=" visibility: visible;  position: relative;  background: #fff; display: block; box-shadow: 0 2px 5px 3px #eff1f8;  border-radius: 3px; ">
                             <div style="    padding: 15px 15px 5px 15px;">
                                 <h3 style="    font-size: 24px;color: #178dc4;    margin: 0 0 15px;">
-                                    致，孤勇如你-情桑 </h3>
+                                    致,孤勇如你-情桑 </h3>
                                 <img src="./hear/guyong.jpg" style="height: 100px;width: 100px">
                                 <!--<p style="    font-size: 16px; line-height: 24px;    color: #606060;-->
                                 <!--overflow: hidden;    text-overflow: ellipsis;    display: -webkit-box;    -webkit-line-clamp: 2;">-->
@@ -121,6 +121,23 @@
                             </div>
                             <div style="border-top: 1px solid #ebeef6;   background: #fff;    padding-left: 20px; padding-top: 5px;   font-size: 14px;">
                                 <span style="padding-right: 8px;">就该坦荡活得壮丽</span>
+                            </div>
+                        </article>
+                    </div>
+
+                    <div style="display: block;   float: left;vertical-align: top;    padding: 0 15px;    margin-bottom: 30px; width: 30% ">
+                        <article
+                                style=" visibility: visible;  position: relative;  background: #fff; display: block; box-shadow: 0 2px 5px 3px #eff1f8;  border-radius: 3px; ">
+                            <div style="    padding: 15px 15px 5px 15px;">
+                                <h3 style="    font-size: 24px;color: #178dc4;    margin: 0 0 15px;">
+                                    认真的老去 -张希/曹方</h3>
+                                <img src="./hear/renzhengdelaoqu.jpg" style="height: 100px;width: 100px">
+                                <!--<p style="    font-size: 16px; line-height: 24px;    color: #606060;-->
+                                <!--overflow: hidden;    text-overflow: ellipsis;    display: -webkit-box;    -webkit-line-clamp: 2;">-->
+                                <!--</p>-->
+                            </div>
+                            <div style="border-top: 1px solid #ebeef6;   background: #fff;    padding-left: 20px; padding-top: 5px;   font-size: 14px;">
+                                <span style="padding-right: 8px;">来不及认真的年轻过 就认真的老去</span>
                             </div>
                         </article>
                     </div>
